--- a/WebViewSample/app/src/main/res/layout/activity_main.xml
+++ b/WebViewSample/app/src/main/res/layout/activity_main.xml
@@ -130,6 +130,11 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+        
+        <VideoView
+            android:id="@+id/intro"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
